{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 9,
  "lineage": "f2bfb9b6-745b-5894-2f0e-7b5f92c2ee29",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkInterfaces/terraform-nic",
            "internal_domain_name_suffix": "rqfwiap3x1cepocxycez4w24zd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform-10/subnets/sub1"
              }
            ],
            "location": "eastus",
            "name": "terraform-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "terraform_rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1",
            "location": "eastus",
            "name": "terraform-nsg1",
            "resource_group_name": "terraform_rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "terraform-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "terraform_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform-10/subnets/sub1",
            "name": "sub1",
            "resource_group_name": "terraform_rg",
            "virtual_network_name": "terraform-10"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform-10/subnets/sub1",
            "network_security_group_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1",
            "subnet_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform-10/subnets/sub1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "01640b8c-befd-47c4-b857-c0899f5b9ecb",
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform-10",
            "location": "eastus",
            "name": "terraform-10",
            "resource_group_name": "terraform_rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}